[package]
name = "blocking_async"
version = "0.1.0"
authors = ["Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
rand = "0.8.3"
rayon = "1.5.1"
tokio = {version ="1.6.0", features = ["full"]}
lazy_static = "1.4.0"
crossbeam-channel = "0.5.1"
pin-project = "1"